# portable-simd-addons

./: .gitmodules  Cargo.toml  README.md  benchformat.py  build.rs  rust-toolchain
.github/workflows/: ci.yaml  docs.yaml
benches/: math.rs  trig.rs  vclbench.cpp  vclbench.hpp
benches/cpp/: cppbench.hpp  libmvecbench.cpp  libmvecbench.hpp  libmvecbench.rs  vclbench.cpp  vclbench.hpp  vclbench.rs
src/: lib.rs
src/math/: exp.rs  mod.rs  poly.rs  trig.rs  util.rs
src/math/f32/: exp.rs  mod.rs  trig.rs
src/math/f64/: exp.rs  mod.rs  trig.rs
tests/: math.rs  trig.rs
tests/common/: mod.rs
